# kryptor

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
.cache/clangd/index/: main.cpp.D5467533E621EC14.idx
inc/: aes.hpp  rsa.hpp
src/: aes.cpp  rsa.cpp
